# omnibid

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.openspec  Dockerfile.supabase-cli  Listado  PRODUCT.md  README.md  RTK.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  workspace.css.diff  workspace.tsx.diff
.codex/: LOCAL_ADAPTATIONS.md  mcp.json
.codex/commands/: README.md  commit-local.md  commit.md  design-review.md  execute.md  explain.md  grill-with-docs.md  next-proposal.md  next-step.md  plan.md  prime.md  review-fix.md  self-heal-ci.md  validate.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  mp-api-sync.yml
.zed/: settings.json
alembic/: env.py
alembic/versions/: 0001_operational_and_bronze.py  0002_silver_v1_core.py  0003_silver_oc_compat_patch.py  0004_rename_raw_norm_tables.py  0005_dataset_summary_snapshots.py  20260422172140_normalized_domain_normalized_domain_entities.py  (+11 more)
backend/: main.py
client/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
codex/: LOCAL_ADAPTATIONS.md  README.md
config/: pipeline.yaml
docs/: README.md  project-description-for-agent.md  project-description-for-ui-ux-analysis.md
openspec/: initial_foundation.md
scripts/: build_nlp_annotations.py  build_normalized.py  build_silver.py  check_client_pnpm_refs.py  fetch_mp_api.py  ingest_raw.py  profile_files.py  profile_raw.py  rtk_doctor.ps1  rtk_pin_wsl.ps1  rtk_unpin_wsl.ps1  run_ingestion_jobs.py  run_mp_api_daily_pipeline.py  run_with_spinner.ps1  supabase_start_smoke.sh  sync_codex_dir.sh  terminal_spinner.ps1  test_db_guard.py
supabase/: config.toml
(+427 files in other folders)
