[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["client*", "data*", "docs*", "openspec*", "scripts*", "tests*", "alembic*"]

[project]
name = "app-chilecompra"
version = "0.1.0"
description = "ChileCompra procurement data platform foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "tqdm>=4.66.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "black>=24.8.0",
  "pyright>=1.1.380",
  "bandit[toml]>=1.8.1",
  "ty>=0.0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: tests that require external services like PostgreSQL",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.pyright]
include = ["backend", "scripts"]
exclude = [
  "**/__pycache__",
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportUnusedFunction = "none"

[tool.bandit]
exclude_dirs = [
  "tests",
  "alembic/versions",
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
]
